# mapreduce

./: .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.node  Makefile  docker-compose.dynamic.yml  docker-compose.yml  spec.txt
configuration/: base.yaml  spec.yaml
scripts/: init_cluster.sh  init_jaeger.sh  init_storage.sh
src/: configuration.rs  emitter.rs  error.rs  file_splitter.rs  functions.rs  job.rs  lib.rs  main.rs  mapreduce.rs  master.rs  registry.rs  spec.rs  startup.rs  telemetry.rs  test_utils.rs  utils.rs  worker.rs
src/executors/: mod.rs  parallel.rs  sequential.rs
src/mappers/: mod.rs  word_counter.rs
src/master/: lib.rs  mod.rs  server.rs  service.rs
src/reducers/: adder.rs  mod.rs
src/storage/: s3.rs
src/worker/: executor.rs  lib.rs  mod.rs  server.rs  service.rs
tests/api/: helpers.rs  main.rs  mapreduce.rs  spec.rs
tests/data/: input_0.txt  input_1.txt  input_2.txt  input_3.txt  input_4.txt  small_test.txt
