[package]
name = "mapreduce"
version = "0.1.0"
authors = ["Kevin Kenyon <kevin@turing.club>"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.7.0"
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["v4"] }
once_cell = "1.19"
inventory = "0.3"
futures = "0.3"
tarpc = { version = "0.37", features = ["tokio1"]}

[dev-dependencies]
claims = "0.8"

[lib]
name = "mapreduce"
path = "src/lib.rs"

[[bin]]
name = "master"
path = "src/master/server.rs"

[[bin]]
name = "worker"
path = "src/worker/server.rs"
