[package]
name = "mapreduce"
version = "0.1.0"
authors = ["Kevin Kenyon <kevin@turing.club>"]
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.7.0"
anyhow = "1.0.99"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
futures = "0.3"
tarpc = { version = "0.37", features = ["full"]}
clap = { version = "4.4.18", features = ["derive"] }
aws-sdk-s3 = "1.106.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
config = "0.15.15"
secrecy = { version="0.10.3", features=["serde"] }
dotenv = "0.15.0"
aws-credential-types = "1.2.6"
thiserror = "2.0.16"
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["v1_32"]}
tracing = "0.1"
tracing-subscriber = "0.3.0"


[dev-dependencies]
claims = "0.8"

[lib]
name = "mapreduce"
path = "src/lib.rs"

[[bin]]
name = "master"
path = "src/master/server.rs"

[[bin]]
name = "worker"
path = "src/worker/server.rs"
